fixed some flex alignment

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
         }
         .loser {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             position: absolute;
